<resources>
    <string name="app_name">Mobifind</string>
    <string name="welcome_text">Welcome</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number_hint">+2348050000000</string>
    <string name="password_text">Password</string>
    <string name="login_btn_text">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="signup_btn_text">Sign up</string>
    <string name="signup_fragment_hintText">Enter your phone number</string>
    <string name="title_activity_firebase_auth">FirebaseAuthActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="empty_tracking_list">You\'re currently tracking no one</string>
    <string name="empty_tracker_list">Nobody is tracking you at the moment</string>
    <string name="map_image">Profile Image</string>
    <string name="contacts">Contacts</string>
    <string name="contactName">Alhaji Okezi</string>
    <string name="status">Add</string>
    <string name="phone_number">+234 802 232 0123</string>
    <string name="dialog_tv_hint">Please enter your username</string>
    <string name="dialog_done_btn">Done</string>

    <string name="preference_file_key">com.decagon.mobifind.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">connected</string>
    <string name="launch_activity">Launch activity</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>

    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="permission_denied_walkthrough">"You need to enable location permission, navigate to Permissions, select Location and choose \"Allow all the time\".</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="start_location_updates_button_text">Start receiving location updates</string>


    <string name="location_updated">Location Updated: %1$s</string>
    <string name="service_desc">This is accessibility enables Mobifind to receive the boot completed
        broadcast which is needed for the core functionality of Mobifind.</string>
    <string name="accessibility_dialog_msg">Please enable accessibility for this application to function correctly.</string>
    <string name="tab_indicator">tabs indicator</string>
    <string name="tracking">Tracking</string>
    <string name="trackers">Trackers</string>
    <string name="remove">Remove From List</string>
    <string name="tracking_desc">Track contacts on mobifind in real-time on the map and navigate to where they are</string>
    <string name="trackers_desc">Grant a contact permission to keep track of your position</string>
    <string name="remove_desc">Swipe to delete from your tracker list</string>
    <string name="add_to_trackers_list">Add to trackers list</string>
    <string name="get_started"><b>Get Started</b></string>
    <string name="background_location_permission_title">Allow mobifind to access this device\'s location even when closed or not in use.</string>
    <string name="background_location_permission_message">This app collects location data to enable people whom you have granted permission to track you, keep track of your current position.</string>
    <string name="yes">Change to \"Allow all the time\"</string>
    <string name="no">Cancel</string>
    <string name="onboard_image">onboardImage</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="last_">Last updated: August 10, 2021. The privacy Policy on mobifind is carefully being review, changes and updates are made when due, policy change on user geolocation, Among other clarifying changes, we have added more details about the information we collect and how it\'s used, information related to the following,   collection of user content information, use of data for verification, ad related choices, data sharing with third party services, and data storage/processing practices.</string>
    <string name="iwc">Information we Collect</string>
    <string name="firstiwc">In order to effectively use the Mobifind application, we collect some information to operate and provide support as regards services we provide.</string>
    <string name="secondText">Some of the information we request from you are optional while others are very paramount in account opening and delivering our service. For example, you must provide a valid phone number to register as a new user to use our service and also permit the application access to collect your location from your device to fully utilize our service.</string>
    <string name="thirdText">More information about the categories and sources of information is provided below.</string>
    <string name="info">Information You Provide</string>
    <string name="mpp"><u>Mobifind Privacy Policy</u></string>
    <string name="actInfo">Your Account Information</string>
    <string name="actInfoContent">To create a Mobifind account, you must provide a mobile phone number and a profile name, additional information can be provided to increase your user experience such as profile picture.</string>
    <string name="pc">Phone contacts</string>
    <string name="pcContent">With your permission, mobifind will need to access other users through your phone contacts. We will access and collect the names and phone numbers from your contact and match the information against users already on the platform in order for you to send invites or add to your list of users.</string>
    <string name="tpd">Transactions And Payments Data</string>
    <string name="atpContent">Mobifind is free and easy to use for the purpose of tracking location, we will not ask for your card details or any financial payment document, if there is any update or a paid service on the application,we will update this privacy policy.</string>
    <string name="pap">Phone Accessbility permission</string>
    <string name="papContent">To effectively use the appllication, Phone Accessbility will be use to run some background service on the application.</string>
    <string name="ica">Information we collect automatically</string>
    <string name="icaContent">Mobifind automatically collects certain information from you when you use the Platform, including internet or other network activity information such as your geolocation-related data (as described below).</string>
    <string name="ld">Location Data</string>
    <string name="ldContent">We collect information about your approximate location, including location information based on your IP address. With your permission, we collect precise location data (such as GPS).The Geolocation API returns a location and accuracy radius based on information about cell towers and WiFi nodes that your device detects.We also use your location information for diagnostics and troubleshooting purposes.</string>
    <string name="useInfo">How we use your information</string>
    <string name="useInfo1">We use information you provide to improve,support,operate,customize and administer the platform to allow you to use its functionalities.</string>
    <string name="useInfo2">Below is a brief description on how we use your information:</string>
    <string name="ls">Our location Service</string>
    <string name="lsContent">The basic purpose of the application is to get and share user location to other users on request, location information obtained are used for this purpose alone and to inform our algorithms.</string>
    <string name="tpa">No Third-Party Ads</string>
    <string name="tpaContent">We don’t share your data with third-parties or allow third-party banner ads on our platform, We have no intention to introduce them, but if we ever do, we will update this Privacy Policy.</string>
    <string name="tc">Terms and Conditions</string>
    <string name="tcContent">To enforce our terms, conditions, and policies</string>
    <string name="ot">Other Information</string>
    <string name="otContent">For any other purposes disclosed to you at the time we collect your information or pursuant to your consent</string>
    <string name="sInfo">How we share your information</string>
    <string name="sInfoContent">We are committed to maintaining your trust, we wont sell personal information to third parties, we want you to understand when and with whom we may share the information we collect for business purposes</string>
    <string name="oc">Within Our Corporate Organisation</string>
    <string name="ocContent">We may share all of the information we collect with a subsidiary, or other affiliate of our corporate organisation for same purpose.</string>
    <string name="sm">Sales, Merger, or Other Business Transfer</string>
    <string name="smContent">In connection with a substantial corporate transaction such as sale of application, a merger,consolidation,asset sales or bankrupycy, we may share all of the information we collect</string>
    <string name="lr">For Legal Reasons</string>
    <string name="lrContent">We may disclose any of the information we collect to respond to subpoenas, court orders, legal process, law enforcement requests, legal claims, or government inquiries, and to protect and defend the rights, interests, safety, and security of Mobifind as a company, the Platform, our affiliates, users, or the public.</string>
    <string name="lrContent2">We may also share any of the information we collect to enforce any terms applicable to the Platform, to exercise or defend any legal claims, and comply with any applicable law.</string>
    <string name="ur">User Rights</string>
    <string name="urContent">You may submit a request to access or delete the information we have collected about you by sending your request to our contact email provided in the Contact section at the bottom of this policy.</string>
    <string name="ch">Children</string>
    <string name="chContent">This is a general privacy policy and it\'s not limited to a certain age group</string>
    <string name="up">Updates To Our Policy</string>
    <string name="upContent">We may update or amend the Privacy Policy and updates will be shared according to when due, however the latest update date will also be shared at the “Last modified” date at the top of this Privacy Policy. Please review our Privacy Policy from time to time.</string>
    <string name="cu">Contact Us</string>
    <string name="ng">Nigeria.</string>
    <string name="okh">Okhoromi Community, Edo State,</string>
    <string name="ohen">3 Ohen Road,</string>
    <string name="mo">Mobifind Ltd.</string>
    <string name="email_mob">mobifind4@gmail.com</string>


</resources>