<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivacyActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/privacy_activity_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:textFontWeight="700"
                android:text="@string/mpp"
                android:textColor="@color/dark_blue"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/privacy_"
                style="@style/ContentBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/last_"
                android:textSize="15sp"

                />

            <TextView
                android:id="@+id/information"
                style="@style/Headers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iwc" />

            <TextView
                android:id="@+id/informationCon"
                style="@style/ContentBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/firstiwc" />

            <TextView
                android:id="@+id/informationCont2"
                style="@style/ContentBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/secondText" />

            <TextView
                style="@style/SubHeaders"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/info"

                />
            <TextView
                style="@style/Sub_Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actInfo"
                />
            <TextView
                style="@style/ContentBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actInfoContent"
                android:justificationMode="inter_word"
                />
            <TextView
                style="@style/Sub_Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pc"
                />
            <TextView
                style="@style/ContentBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pcContent"
                android:justificationMode="inter_word"
                />
            <TextView
                style="@style/Sub_Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tpd"/>
            <TextView
                style="@style/ContentBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/atpContent"/>
            <TextView
                style="@style/Sub_Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/pap"/>
            <TextView
                style="@style/ContentBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/papContent"
                android:justificationMode="inter_word"/>
            <TextView
                style="@style/SubHeaders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ica"/>
            <TextView
                style="@style/ContentBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/icaContent"/>
            <TextView
                style="@style/Sub_Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ld"/>
            <TextView
                style="@style/ContentBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/ldContent"/>
            <TextView
                style="@style/Headers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/useInfo"/>
            <TextView
                style="@style/ContentBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/useInfo1"/>
            <TextView
                style="@style/ContentBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/useInfo2"/>
            <TextView
                style="@style/SubHeaders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ls"/>
            <TextView
                style="@style/ContentBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/lsContent"/>
            <TextView
                style="@style/SubHeaders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tpa"/>
            <TextView
                style="@style/ContentBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/tpaContent"/>
            <TextView
                style="@style/SubHeaders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tc"/>
            <TextView
                style="@style/ContentBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/tcContent"/>
            <TextView
                style="@style/SubHeaders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ot"/>
            <TextView
                style="@style/ContentBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/otContent"

                />
            <TextView
                style="@style/Headers"
                android:text="@string/sInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                style="@style/ContentBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/sInfoContent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SubHeaders"
                android:text="@string/oc"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ContentBody"
                android:justificationMode="inter_word"
                android:text="@string/ocContent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SubHeaders"
                android:text="@string/sm"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ContentBody"
                android:justificationMode="inter_word"
                android:text="@string/smContent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lr"
                style="@style/SubHeaders"/>
            <TextView
                style="@style/ContentBody"
                android:justificationMode="inter_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lrContent"/>
            <TextView
                style="@style/ContentBody"
                android:justificationMode="inter_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lrContent2"/>
            <TextView
                style="@style/Headers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ur"/>
            <TextView
                style="@style/ContentBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/urContent"/>
            <TextView
                style="@style/Headers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ch"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ContentBody"
                android:justificationMode="inter_word"
                android:text="@string/chContent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Headers"
                android:text="@string/up"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ContentBody"
                android:justificationMode="inter_word"
                android:text="@string/upContent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               style="@style/Headers"
                android:text="@string/cu"/>





            <TextView
                android:layout_marginStart="15sp"
                android:layout_width="wrap_content"
                android:textColor="@color/dark_blue"
                android:layout_height="wrap_content"
                android:text="@string/mo"/>
            <TextView
                android:layout_marginStart="15sp"
                android:textColor="@color/dark_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ohen"/>
            <TextView
                android:layout_marginStart="15sp"
                android:textColor="@color/dark_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/okh"/>
            <TextView
                android:layout_marginStart="15sp"
                android:textColor="@color/dark_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ng"/>
            <TextView
                android:layout_marginStart="15sp"
                android:layout_width="wrap_content"
                android:textColor="@color/dark_blue"
                android:layout_height="wrap_content"
                android:text="@string/email_mob"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:orientation="horizontal">
                            <TextView
                                android:id="@+id/privacy_activity_agree"
                                android:layout_width="wrap_content"
                                android:gravity="center"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/agree"
                                android:background="@drawable/bgbtnwhite"
                                android:textSize="15sp"
                                android:padding="10dp"
                                android:layout_margin="20dp"
                              />

                            <TextView
                                android:id="@+id/privacy_activity_disagree"
                                android:layout_width="wrap_content"
                                android:layout_weight="1"
                                android:textColor="@color/white"
                                android:gravity="center"
                                android:padding="10dp"
                                android:background="@drawable/bgbtnblack"
                                android:layout_height="wrap_content"
                                android:text="@string/disagree"
                                android:textSize="15sp"
                                android:layout_margin="20dp"
                            />

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>